Fixed Padding error on smaller screens

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -270,7 +270,7 @@ footer {
 
 @media print, screen and (max-width: 480px) {
   body {
-    padding:15px;
+    padding:0px;
   }
 
   .downloads {
